# FsNext

./: .gitignore  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  REPORT.md  STATUS.md
design/handoff/: Fshare Desktop · Standalone.html  Fshare Desktop.html
design/handoff/src/: aurora-screens.jsx  aurora-upload-modal.jsx  ds-components-1.jsx  ds-components-3.jsx  ds-guidelines.jsx  ds-icon-library.jsx  ds-table.jsx  variant-aurora-files-v2.jsx
docs/: 00_module_map.md  01_features.md  02_api_contracts.md  03_data_models.md  04_business_workflows.md  05_dependency_graph.md  06_edge_cases.md  07_architecture.md  08_assessment_and_roadmap.md  09_verification_report.md  10_login_400_playbook.md  11_post_blocker_roadmap.md  17-fileops-favorites.md  ARCHITECTURE.md  ASSESSMENT.md  BACKLOG.md  CRASH_AUDIT.md  FILE_MANAGER_CRASH_AUDIT.md  PR_v6.0_keyboard_a11y_and_sync.md  README.md  account_external_links.md  auto-upload-ui-design.md  design-system.md  download_test_cases.md  i18n-audit.md  m18-async-scan-plan.md  module_ui_inventory.xlsx  sync_autoupload_refactor.md  test-inventory.xlsx  test-manual-checklist.md  transfer-hud-ux-spec.md  upload_test_cases.md
docs/decisions/: 001_architecture_pattern.md  002_tech_stack.md  003_upgrade_decisions.md
extension/: background.js  manifest.json  popup.html  popup.js
mockup/: transfer-hud-preview.html
qml/: Main.qml
qml/FsAurora/Components/: FsBadge.qml  FsButton.qml  FsCard.qml  FsFontLoader.qml  FsIcon.qml  FsMiniHud.qml  FsPageHeader.qml  FsProgressBar.qml  FsScrollPage.qml  FsSidebar.qml  FsSwitch.qml  FsTextField.qml  FsToastHost.qml  HomeSearchOverlay.qml  Sparkline.qml  TransferHudPanel.qml  qmldir
qml/FsAurora/Pages/: HomePage.qml  LoginView.qml  ShowcasePage.qml  qmldir
qml/FsAurora/Theme/: AuroraColors.qml  AuroraTheme.qml  Pages.qml  qmldir
qml/FsAurora/Windows/: MiniHudWindow.qml  qmldir
qml/FsAurora/handoff/: README.md  design-tokens.json  tokens.css
qml/FsAurora/src/: aurora-sync-auto.jsx  ds-components-2.jsx  icons.jsx  variant-aurora-files.jsx
qml/Fshare/Components/: FsActivityRow.qml  FsBadge.qml  FsBreadcrumb.qml  FsButton.qml  FsCard.qml  FsCheckbox.qml  FsCommandPalette.qml  FsConfirmDialog.qml  FsContextMenu.qml  FsDialog.qml  FsEmptyState.qml  FsFileMediumCard.qml  FsFileTypeIcon.qml  FsFolderPicker.qml  FsGradientRect.qml  FsIcon.qml  FsInlineAlert.qml  FsLoadingState.qml  FsNavigation.qml  FsProgressBar.qml  FsRadio.qml  FsRemoteFolderTree.qml  FsRenameDialog.qml  FsSegmentedControl.qml  FsSelect.qml  FsShareDialog.qml  FsSkeletonLoader.qml  FsSpinner.qml  FsSwitch.qml  FsTextField.qml  FsToast.qml  FsTooltip.qml  FsTransferItem.qml  FsUploadDialog.qml  FsWatchCard.qml  qmldir
qml/Fshare/Dialogs/: AddWatchFolderDialog.qml  FileDetailSheet.qml  FolderBrowserDialog.qml  RemoveWatchDialog.qml  WatchFolderSettingsDialog.qml  qmldir
resources/: app.rc  resources.qrc
resources/data/: search_bad_words.json
resources/fonts/: README.md
scripts/: _build_fsnext_only.bat  _configure.bat  _rebuild_fsnext.bat  bind_extension_id.bat  build-verbose.bat  build.bat  build_module_inventory_xlsx.py  check_deps.bat  clear_cache.bat  debug_run.bat  encode_appkey.py  fetch-aurora-fonts.ps1  fetch-aurora-fonts.sh  generate_app_icon.py  generate_icons.py  health_check.py  installer.iss  register_native_host.bat  rename_tokens.py
smartTV_deleted/documents/: 01_phan-tich-hien-trang.md  02_khuyen-nghi-kien-truc.md  03_lua-chon-cong-nghe.md  04_apk-va-update.md  05_player-media-nhung.md  06_ux-10foot-dpad.md  07_lo-trinh-trien-khai.md  08_rui-ro-va-giam-thieu.md  09_design-spec.md  10_design-handoff-requirements.md  11_review-handoff-v1.md  12_scope-decisions-v1.md  13_implementation-spec-v1.md  14_screen-catalog.md  15_readiness-checklist.md  16_implementation-summary.md  17_api-migration-analysis.md  README.md
smartTV_deleted/streamix-tv/: .editorconfig  .gitignore  BUILD.md  README.md  build.gradle.kts  fix-wrapper.ps1  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  setup-env.ps1
src/: main.cpp
src/app/: AppContext.cpp  AppContext.h  Application.cpp  Application.h
src/i18n/: fshare_en.ts
src/platform/: PlatformUtils.cpp  PlatformUtils.h  SingleInstance.cpp  SingleInstance.h  SystemTray.cpp  SystemTray.h  TaskbarProgress.cpp  TaskbarProgress.h
src/viewmodels/: AuthViewModel.cpp  AuthViewModel.h  DownloadViewModel.cpp  DownloadViewModel.h  FavoritesViewModel.cpp  FavoritesViewModel.h  FileListModel.cpp  FileListModel.h  FileManagerViewModel.cpp  FileManagerViewModel.h  FolderPickerModel.cpp  FolderPickerModel.h  FolderTreeModel.cpp  FolderTreeModel.h  HomeSearchViewModel.cpp  HomeSearchViewModel.h  LanguageViewModel.cpp  LanguageViewModel.h  RemoteShareViewModel.cpp  RemoteShareViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  SyncViewModel.cpp  SyncViewModel.h  TransferBudgetViewModel.cpp  TransferBudgetViewModel.h  TransferHudViewModel.cpp  TransferHudViewModel.h  TransferListModel.cpp  TransferListModel.h  UploadStagingViewModel.cpp  UploadStagingViewModel.h  UploadViewModel.cpp  UploadViewModel.h  UserInfoViewModel.cpp  UserInfoViewModel.h
tests/: CMakeLists.txt  test_api_response.cpp  test_app_error.cpp  test_app_settings.cpp  test_auth_service.cpp  test_auth_viewmodel.cpp  test_budget_manager.cpp  test_download_viewmodel.cpp  test_favorites_viewmodel.cpp  test_file_cache_db.cpp  test_file_cache_service.cpp  test_file_item.cpp  test_file_type_helper.cpp  test_filename_resolver.cpp  test_filename_sanitizer.cpp  test_format_util.cpp  test_fshare_url.cpp  test_history_repository.cpp  test_language_viewmodel.cpp  test_pkce.cpp  test_priority_scheduler.cpp  test_refresh_coordinator.cpp  test_resolve_proxy_url.cpp  test_secure_store.cpp  test_settings_viewmodel.cpp  test_speed_meter.cpp  test_sync_folder.cpp  test_sync_repository.cpp  test_sync_scan.cpp  test_transfer_history_db.cpp  test_transfer_orchestrator.cpp  test_transfer_task.cpp  test_upload_staging_viewmodel.cpp  test_upload_viewmodel.cpp  test_user_model.cpp  test_userinfo_viewmodel.cpp
(+290 files in other folders)
